@@ -9,13 +9,14 @@ import dev.langchain4j.store.embedding.EmbeddingSearchRequest;
 import dev.langchain4j.store.embedding.EmbeddingStore;
 import org.albedo.vllmpt.module.ai.service.EmbeddingModelFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 
 @Service
-public class RagServiceImpl   {
+public class KnowledgeBaseRagServiceImpl   {
 
 
     @Value("${langchain4j.open-ai.embedding-model.dimension}")
@@ -27,22 +28,22 @@ public class RagServiceImpl   {
     @Autowired
     private EmbeddingModelFactory embeddingModelFactory;
 
+    private final EmbeddingStore<TextSegment> knowledgeBaseEmbeddingStore;
 
-    private  EmbeddingStore<TextSegment> embeddingStore;
-    public RagServiceImpl(EmbeddingStore<TextSegment> embeddingStore) {
-        this.embeddingStore = embeddingStore;
+    public KnowledgeBaseRagServiceImpl(
+            @Qualifier("knowledgeBaseEmbeddingStore")EmbeddingStore<TextSegment> knowledgeBaseEmbeddingStore ) {
+        this.knowledgeBaseEmbeddingStore = knowledgeBaseEmbeddingStore;
     }
 
 
     public void indexText(String text) {
 
         EmbeddingModel model = embeddingModelFactory.createModel(modelName, dimension);
-
         // 2. 调用模型进行向量化
         Embedding embedding = model.embed(text).content();
 
         // 3. 调用 Store 存入数据库
-        embeddingStore.add(embedding, TextSegment.from(text));
+        knowledgeBaseEmbeddingStore.add(embedding, TextSegment.from(text));
     }
 
     public List<String> searchRelevantTexts(String query, int maxResults,Double minScore) {
@@ -53,14 +54,12 @@ public class RagServiceImpl   {
                 .minScore(minScore)
                 .maxResults(maxResults)
                 .build();
-        List<EmbeddingMatch<TextSegment>> matches = embeddingStore.search(embeddingSearchRequest).matches();
 
+        List<EmbeddingMatch<TextSegment>> matches = knowledgeBaseEmbeddingStore.search(embeddingSearchRequest).matches();
         List<String> results = matches.stream().map(item->item.embedded().text()).toList();
-
-        EmbeddingMatch<TextSegment> embeddingMatch = matches.get(0);
+        EmbeddingMatch<TextSegment> embeddingMatch = matches.getFirst();
         System.out.println(embeddingMatch.score()); // 0.8144288493114709
         System.out.println(embeddingMatch.embedded().text());
-
         return  results;
     }
 }
